<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocialNetApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="find_all">Find All</string>
    <string name="identity_provider">Identity Provider</string>
    <string name="identifier">Identifier</string>
    <string name="create_event">Create Event</string>
    <string name="rant">Rant</string>

    <string-array name="provider_name">
        <item>FB</item>
        <item>VK</item>
    </string-array>

    <string-array name="feeling">
        <item >Hatred</item>
        <item >Dislike</item>
        <item >Like</item>
        <item >Love</item>
    </string-array>
        <string name="pref_storage_title">Storage</string>
        <string name="pref_title_use_icloud">Use iCloud</string>
        <string name="find_events">Find Events</string>

</resources>