<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textViewMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/spinnerProviderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="5dp" />

            <EditText
                android:id="@+id/editTextIdentifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/identifier"
                android:padding="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnRequestOne"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:padding="5dp"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/btnRequestTwo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:padding="5dp"
                    android:text="@string/find_all" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerFeeling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="5dp" />

            <EditText
                android:id="@+id/editTextRant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rant"
                android:padding="5dp" />

            <Button
                android:id="@+id/btnCreateEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/create_event" />

            <Button
                android:id="@+id/btnFindEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/find_events" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>